Remove events from the revert list.

State change "events" should be removed from the revert
list the same way property changes are.

Task-number: QTBUG-22583
Change-Id: Ia3f4d16ee8855d163a7f6118a0bc1f8492727940
Reviewed-by: Yunqiao Yin <charles.yin@nokia.com>